--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -3,3 +3,12 @@
   padding: 2rem;
   width: 60%;
 }
+
+.form-control {
+  margin: auto;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  width: 60%;
+  text-align: center;
+  font-size: 1.5rem;
+}
