--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,8 +1,9 @@
 .navbar {
   margin-bottom: 10rem;
-  padding: 2rem 1rem 2rem 2rem;
+  padding: 0.5rem 1rem 1rem 2rem;
 }
 
 .navbar-brand {
-  font-size: 3rem;
+  font-size: 4rem;
+  font-family: 'Poiret One', cursive;
 }
